--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YTC AI - Hinglish/Hindi/English</title>
+    <title>YTC AI - Smart Assistant</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>YTC AI 🤖</h1>
+        <h1><i class="fas fa-robot"></i> YTC AI</h1>
         <div class="chat-box" id="chatBox"></div>
         <div class="input-area">
-            <input type="text" id="userInput" placeholder="Kuch bhi likho...">
-            <button onclick="sendMessage()">Bhejo</button>
+            <input type="text" id="userInput" placeholder="Kuch bhi poocho...">
+            <button onclick="sendMessage()"><i class="fas fa-paper-plane"></i></button>
         </div>
     </div>
     <script src="script.js"></script>
